# curator

./: .gitignore  DEPLOYMENT_SUCCESS.md  FIXES_VERIFIED.md  IMPLEMENTATION_SUMMARY.md  Jenkinsfile  README.md  pyproject.toml
deploy/: Dockerfile  README.md  ansible-deploy.yml  curator.container  curator.env.example
docs/: ARCHITECTURE.md  PLUGINS.md
scripts/: backfill_channel.py
src/curator/: __init__.py  api.py  chunking.py  cli.py  config.py  daemon.py  glimpse_client.py  models.py  orchestrator.py  storage.py
src/curator/plugins/: __init__.py  base.py  podcast.py  rss.py  youtube.py  youtube_utils.py
tests/: __init__.py  test_api.py  test_config.py  test_daemon.py  test_daemon_enrich_visual_context.py  test_glimpse_client.py  test_storage.py
tests/plugins/: test_youtube.py
